manifests/cluster-addons/jellyfin/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: jellyfin
            tailscale.com/parent-resource-ns: jellyfin
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: seerr
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

  egress:
    - toFQDNs:
        - matchPattern: '*.jellyfin.org'
        - matchName: 'www.theaudiodb.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
